<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/navigation_now_playing_movie"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        android:title="@string/title_now_playing" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="Profile" />

</menu>
