<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        app:itemIconTint="@drawable/bottom_navigation_selector"
        android:id="@+id/navigation_home"
        android:name="com.example.asistensi1dan2tahap1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        app:itemIconTint="@drawable/bottom_navigation_selector"
        android:id="@+id/navigation_dashboard"
        android:name="com.example.asistensi1dan2tahap1.ui.up_coming_movies.UpComingMovieFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_up_coming_movie" />

    <fragment
        app:itemIconTint="@drawable/bottom_navigation_selector"
        android:id="@+id/navigation_now_playing_movie"
        android:name="com.example.asistensi1dan2tahap1.ui.now_playing_movies.NowPlayingMovieFragment"
        android:label="@string/title_now_playing"
        tools:layout="@layout/fragment_now_playing_movie" />

    <fragment
        app:itemIconTint="@drawable/bottom_navigation_selector"
        android:id="@+id/navigation_notifications"
        android:name="com.example.asistensi1dan2tahap1.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>